aws/k8s/valheim-k8s-manifests/valheim-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: valheim-server
  name: valheim-server
  namespace: valheim
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valheim-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: valheim-server
    spec:
      containers:
      - env:
        - name: NAME
          value: "geekzone"
        - name: WORLD
          value: "geekzone"
        - name: PASSWORD
          value: "$PASSWORD"
        - name: PORT
          value: "2456"
        - name: TZ
          value: "GB/London"
        - name: PUBLIC
          value: "true"
        - name: AUTO_UPDATE
          value: "true"
        - name: AUTO_UPDATE_SCHEDULE
          value: "0 1 * * *"
        - name: AUTO_BACKUP
          value: "true"
        - name: AUTO_BACKUP_SCHEDULE
          value: "*/15 * * * *"
        - name: AUTO_BACKUP_REMOVE_OLD
          value: "7"
        - name: AUTO_BACKUP_DAYS_TO_LIVE
          value: "3"
        - name: AUTO_BACKUP_ON_UPDATE
          value: "1"
        - name: AUTO_BACKUP_ON_SHUTDOWN
          value: "1"
        image: mbround18/valheim:latest
        imagePullPolicy: Always
        name: valheim-server
        ports:
        - containerPort: 2456
          protocol: UDP
        - containerPort: 2457
          protocol: UDP
        - containerPort: 2458
          protocol: UDP
        volumeMounts:
        - mountPath: /home/steam/.config/unity3d/IronGate/Valheim
          name: gamefiles
        - mountPath: /home/steam/valheim
          name: serverfiles
        - mountPath: /home/steam/backups
          name: backups
      dnsPolicy: ClusterFirst
      nodeSelector:
        geekzone-games: "true"
      restartPolicy: Always
      schedulerName: default-scheduler
      tolerations:
      - effect: NoSchedule
        key: geekzone-games
        operator: Equal
        value: "true"
      volumes:
      - hostPath:
          path: /data/valheim
          type: DirectoryOrCreate
        name: gamefiles
      - hostPath:
          path: /data/valheim-server
          type: DirectoryOrCreate
        name: serverfiles
      - hostPath: 
          path: /data/valheim-backups
          type: DirectoryOrCreate
        name: backups

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: valheim-server
  name: valheim-server
  namespace: valheim
spec:
  ports:
    - port: 2456
      protocol: UDP
      targetPort: 2456
      name: gameport
    - port: 2457
      protocol: UDP
      targetPort: 2457
      name: queryport
    - port: 2458
      protocol: UDP
      targetPort: 2458   
      name: testport
  selector:
    app: valheim-server
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-valheim
  namespace: valheim
spec:
  rules: 
  - host: valheim-k8s.geek.zone 
    http:
      paths:
        - path: /
          pathType: Prefix          
          backend:
            service:
              name: valheim-server 
              port: 
                number: 2456
        - path: /
          pathType: Prefix          
          backend:
            service:
              name: valheim-server 
              port: 
                number: 2457
        - path: /
          pathType: Prefix          
          backend:
            service:
              name: valheim-server 
              port: 
                number: 2458
  ingressClassName: nginx
